test/shouldnt-compile/const-erase.cpp
#include "common.hpp"


void check() {
  const Enums es1;
  es1.erase(Enum::One);
}
